{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Game",
            "id": "631ac154-645c-40a2-95c9-7ef11ee7284c",
            "actions": [
                {
                    "name": "Right",
                    "type": "PassThrough",
                    "id": "699ac630-1adc-4005-b32b-22234fd6a028",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Left",
                    "type": "PassThrough",
                    "id": "59ce9de3-6777-4c25-921a-7681275c3aea",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Separuj_Sklo",
                    "type": "Button",
                    "id": "8bb1b64e-e005-4696-b0b6-a3210cc98b67",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Separuj_Papier",
                    "type": "Button",
                    "id": "ed4d0cd1-d951-409e-a73a-20b46af1b08b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Separuj_Plasty",
                    "type": "Button",
                    "id": "1b01437b-8832-4965-a371-b514e3a60dc6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Game",
                    "type": "Button",
                    "id": "de8fd18a-c45b-45d2-8a79-66bd551fb197",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "End_Game",
                    "type": "Button",
                    "id": "78f37276-4ae9-46a3-9d8e-f9cf4ac30386",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "19017ee8-f286-4b34-afbd-128f52b5711b",
                    "path": "2DVector",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "right",
                    "id": "6e695f65-5a46-4284-af03-c82cd7260c99",
                    "path": "<XInputController>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5f339a8b-a2bb-446a-83c3-21872b2c0d79",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "Separuj_Sklo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "35ce94ab-7fe1-4952-bacc-39635b451c41",
                    "path": "<XInputController>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "Separuj_Plasty",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "970d0d09-998f-4021-a23e-1519f60676f7",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "End_Game",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "14167c0e-9c36-4c66-8f0e-c392e8cdd486",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "d9c6cb2c-8206-409f-8c5b-40cbaa991de2",
                    "path": "<XInputController>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "9eb60082-27dc-4b43-b891-0f6497a5dc1a",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "Separuj_Papier",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Keyboard",
            "id": "2d1e4298-9f80-4d4f-84c5-cd7db4713b69",
            "actions": [
                {
                    "name": "w",
                    "type": "Button",
                    "id": "dd811893-e854-4b33-b768-3af389a92e4a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1d6df6d7-229d-4c0f-a421-ec847a8bef62",
                    "path": "<Keyboard>/w",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard control scheme",
                    "action": "w",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Xbox Control Scheme",
            "bindingGroup": "Xbox Control Scheme",
            "devices": [
                {
                    "devicePath": "<XboxOneGampadiOS>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Keyboard control scheme",
            "bindingGroup": "Keyboard control scheme",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}